[metadata]
name = colab_zirc_dims
version = 1.0.7
author = Michael Cole Sitar
author_email = clsitar5@gmail.com
description = Code to measure the dimensions of zircons from LA-ICP-MS alignment images in Google Colab, w/ deep learning automation.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://github.com/MCSitar/colab_zirc_dims
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    ipython
    matplotlib
    numpy
	pandas
	Pillow
	protobuf
	scikit_image
include_package_data = False